bug: 20618 - Alignment is not proper for Tag and Flag -- Something with Icon class changed recently. So for expand column, just use "Expand" class specifically for IE.
http://bugzilla.zimbra.com/show_bug.cgi?id=20618

Copied from Perforce
 Change: 69321

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -327,6 +327,11 @@ td.DDSepInvisible div {
 	border:0px;
 }
 
+.Expand {
+#IFDEF MSIE
+	width: 23px;
+#ENDIF
+}
 
 
 /* ??? SHOTGUN */
